--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -46,8 +46,8 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">实时状态</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">回路</a></dd>
-                        <dd><a href="javascript:;">单灯</a></dd>
+                        <dd><a href="javascript:;">回路列表</a></dd>
+                        <dd><a href="javascript:;">单灯列表</a></dd>
                         <!--<dd><a href="">超链接</a></dd>-->
                     </dl>
                 </li>
