--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,12 @@
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">路灯控制系统</div>
+        <!-- 动态时间 -->
+        <div class="layui-nav main_headerBox main_left layui-layout-left">
+            <nobr>
+                <span id="newTime"></span>
+            </nobr>
+        </div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <!--<ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">控制台</a></li>
@@ -46,7 +52,7 @@
                 <li class="layui-nav-item layui-nav-itemed">
                     <a class="" href="javascript:;">实时状态</a>
                     <dl class="layui-nav-child">
-                        <dd><a href="javascript:;">回路列表</a></dd>
+                        <dd><a href="javascript:void(0)" lay-id="/test" lay-url="/test">回路列表</a></dd>
                         <dd><a href="javascript:;">单灯列表</a></dd>
                         <!--<dd><a href="">超链接</a></dd>-->
                     </dl>
@@ -73,10 +79,27 @@
         </div>
     </div>
 
-    <div class="layui-body">
-        <!-- 内容主体区域 -->
-        <div style="padding: 15px;">内容主体区域</div>
-    </div>
+    <article class="layui-body" >
+        <div class="index_main" style="width:99%">
+            <div class="layui-tab layui-tab-brief" lay-filter="test1" lay-allowClose="true" style="height: 100%">
+                <ul class="layui-tab-title">
+                    <li class="layui-this main-index" lay-id="main">首页</li>
+                </ul>
+                <div class="layui-tab-content" style="height: calc(100% - 20px);">
+                    <div class="layui-tab-item layui-show" style="height: 100%;">
+                        <div class="index_info_box">
+                            <div class="index_msg_box">
+                                <a href="javascript:">设备总数：<span>0</span></a>
+                                <a href="javascript:">在线：<span>0</span></a>
+                                <a href="javascript:">离线：<span>0</span></a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </article>
 
     <div class="layui-footer">
         <!-- 底部固定区域 -->
@@ -85,11 +108,20 @@
 </div>
 
 <script th:src="@{/lib/layui-v2.5.6/layui/layui.js}" type="text/javascript" charset="utf-8"></script>
+<script th:src="@{/js/index.js}" type="text/javascript" charset="utf-8"></script>
 <script>
     //JavaScript代码区域
     layui.use('element', function(){
         var element = layui.element;
 
+        // //获取hash来切换选项卡，假设当前地址的hash为lay-id对应的值
+        // var layid = location.hash.replace(/^#test1=/, '');
+        // element.tabChange('test1', layid); //假设当前地址为：http://a.com#test1=222，那么选项卡会自动切换到“发送消息”这一项
+        //
+        // //监听Tab切换，以改变地址hash值
+        // element.on('tab(test1)', function(){
+        //     location.hash = 'test1='+ this.getAttribute('lay-id');
+        // });
     });
 </script>
 </body>
